# auto-research-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  script.py
.streamlit/: config.toml
auto_research_bot/alembic/: env.py
auto_research_bot/alembic/versions/: 88669b8f8b5f_initial_tables.py
auto_research_bot/config/: settings.py
auto_research_bot/core/: __init__.py  langchain_interactions.py  research_agent.py  summary_agent.py
auto_research_bot/dao/: __init__.py  chat_dao.py  summary_dao.py
auto_research_bot/database/: __init__.py  chat_model.py  connection.py  summary_model.py
auto_research_bot/pages/: home_page.py
auto_research_bot/repository/: __init__.py  httpx_repository.py
auto_research_bot/service/: __init__.py  httpx_service.py  media_wiki_service.py  news_service.py
auto_research_bot/utils/: __init__.py  logging.py  text_utils.py  wiki_text_parser.py
